--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,15 @@
 {
-    "version": 2,
-    "builds": [
-      { "src": "./server.mjs", "use": "@vercel/node" }
-    ],
-    "routes": [
-      
-      { "src": "./(.*)", "dest": "/" }
-    ]
-  }
+  "version": 2,
+  "builds": [
+    {
+      "src": "server.mjs",
+      "use": "@now/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "server.mjs"
+    }
+  ]
+}
